--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=CurrencyApi
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6jG5yuvY57wSQl6wkmdJb+xbNvBsaJdsmDnLfb7ye78=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ CURRCONV_KEY=a7d1460c623d05a15745
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=unused
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
